# molecule-rs

./: .gitignore  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  README.md  index.html  index.js  index.js.LICENSE.txt  index_bg.wasm  pkg_index_js.index.js
.github/workflows/: github-pages.yml
molecule-api/.vercel/: project.json
molecule-core/: Cargo.toml
molecule-core/src/: lib.rs  parser.rs  structure.rs
molecule-core/tests/: parser_tests.rs
molecule-wasm/: Cargo.toml  README.md
molecule-wasm/src/: lib.rs
molecule-web/: README.md  package-lock.json  package.json  webpack.config.js
molecule-web-react/: README.md  package-lock.json  package.json
molecule-web-react/public/: index.html  manifest.json
molecule-web-react/src/: App.css  App.js  api.js
molecule-web-react/src/components/: Header.js  MoleculeIcon.js  SequenceDisplay.js  Sidebar.js  Viewer.js
molecule-web/src/: api.js  index.html  index.js
pkg/: index.d.ts  index.js  index_bg.wasm.d.ts  molecule_wasm.d.ts  molecule_wasm.js  molecule_wasm_bg.wasm  molecule_wasm_bg.wasm.d.ts  package.json
