[package]
name = "molecule-wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for molecule-rs library"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
molecule-core = { path = "../molecule-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "Document",
  "Element",
  "HtmlElement",
  "Window"
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true 